[project]
name = "pyside6-exp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "prettytable>=3.15.1",
    "pyarrow>=19.0.1",
    "pyside6>=6.8.2.1",
    "sqlalchemy>=2.0.38",
    "xlsxwriter>=3.2.2",
]
