[project]
name = "pyside6-exp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "prettytable>=3.16.0",
    "pyarrow>=20.0.0",
    "pyside6>=6.9.1",
    "sqlalchemy>=2.0.41",
    "xlsxwriter>=3.2.5",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
